# python-practice

./: .gitignore  README.md  deco_model.py  ex_01.py
BIPlatformTools/: pyproject.toml
BIPlatformTools/BIPlatformTools/: __init__.py  bi_logging.py
LRU_Cache/: lru_cache.py  lru_cachev2.py
asteroids/: README.md  asteroid.py  asteroidfield.py  circleshape.py  constants.py  main.py  player.py  requirements.txt
bookbot/: main.py
crash_course_projects/aliens_invade/: README.md  alien.py  alien_invasion.py  bullet.py  button.py  game_stats.py  pyproject.toml  scoreboard.py  settings.py  ship.py
crash_course_projects/aliens_invade/try_it/: eva_animated.py  try_it.py  try_it_12_6.py  try_it_13_1.py  try_it_13_3.py  try_it_14_2.py  try_it_classless.py
crash_course_projects/aliens_invade/try_it/sideways_shooter/: bullet.py  character.py  enemy.py  game_stats.py  settings.py  sideways_shooter.py
crash_course_projects/data_vis/: death_valley_highs_lows.py  dice_visual_d6d10.py  die_visual.py  eq_explore_data.py  hn_submissions.py  mpl_squares.py  pyproject.toml  python_repos.py  python_repos_visual.py  random_walk.py  rw_visual.py  scatter_squares.py  sitka_highs.py
crash_course_projects/web_app/: README.md  pyproject.toml
crash_course_projects/web_app/accounts/: urls.py  views.py
crash_course_projects/web_app/learning_logs/: models.py  urls.py  views.py
crash_course_projects/web_app/learning_logs/migrations/: 0001_initial.py  0002_entry.py  0003_topic_owner.py
crash_course_projects/web_app/learning_logs/templates/learning_logs/: base.html  edit_entry.html  index.html  new_entry.html  new_topic.html  topic.html  topics.html
crash_course_projects/web_app/learning_logs/templates/registration/: login.html
crash_course_projects/web_app/ll_project/: settings.py
decorators/: dec_01.py  dec_02.py  dec_03.py  dec_04.py  dec_05.py  decorators.py
flask/: config.py
flask_api_post_collector/: README.md  docker-compose.yml  test_POST.sh
mit-60001/: README.md
pp-exercises/: chlg.txt  ex_02.py  ex_03.py  ex_04.py  ex_05.py  ex_06.py  ex_07.py  ex_10.py  ex_14.py  ex_16.py  missing_el.py
py3-for-sys-admins/: contains.py  ex_01.py  ex_02.py  ex_03.py  ex_04.py  ex_05.py  ex_06.py  ex_07.py  ex_08.py  (+6 more)
(+60 files in other folders)
