[tool.poetry]
name = "biplatformtools"
version = "0.1.0"
description = "This is a testing ground to see how a skeleton biplatform tooling repo would work."
authors = ["Skylar.Iolta <siolta@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.7"
boto3 = "^1.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
