[tool.poetry]
name = "data-vis"
version = "0.1.0"
description = "Crash course data visualization project"
authors = ["Skylar Iolta <23390416+siolta@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
